# physics

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_for_itch.sh  compile_commands.json  resources.md
src/: bouncing_ball.c  double_pendulum.c  main.c  scenes.h  simple_pendulum.c  simulations.h  title.c
test/: dp_benchmark.py
